# dynamic_message_introspection

./: .gitignore  2  README.md
.github/workflows/: build_test.yml
dynmsg/: CMakeLists.txt  package.xml
dynmsg/include/dynmsg/: config.hpp  config.hpp.in  message_reading.hpp  msg_parser.hpp  string_utils.hpp  types.h  typesupport.hpp  vector_utils.hpp  yaml_utils.hpp
dynmsg/src/: message_reading.cpp  message_reading_c.cpp  message_reading_cpp.cpp  msg_parser.cpp  msg_parser_c.cpp  msg_parser_cpp.cpp  string_utils.cpp  typesupport.cpp  vector_utils.cpp  yaml_utils.cpp
dynmsg/test/: test_typesupport.cpp  test_vector_utils.cpp  test_wide_strings.cpp
dynmsg_demo/: CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
dynmsg_demo/include/dynmsg_demo/: cli.hpp  message_reading.hpp  msg_parser.hpp  string_utils.hpp  typesupport_utils.hpp
dynmsg_demo/src/: cli.cpp  cli.hpp  cli_tool.cpp  discovery.cpp  discovery.hpp  dynmsg_demo.cpp  message_reading.cpp  msg_parser.cpp  msg_parser.hpp  string_utils.cpp  string_utils.hpp  typesupport_utils.cpp  typesupport_utils.hpp
dynmsg_demo/test/: minimal_action_server.py  minimal_service.py  msg_parser_test.cpp  test_read_msg_buffer.cpp  test_wide_strings.cpp
dynmsg_msgs/: CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
dynmsg_msgs/msg/: ComplexMsg.msg  WideString.msg
test_dynmsg/: CMakeLists.txt  package.xml
test_dynmsg/examples/: conversion_c.cpp  conversion_cpp.cpp
test_dynmsg/test/: test_conversion.cpp
